--- a/projects/corelib/package.json
+++ b/projects/corelib/package.json
@@ -6,7 +6,8 @@
     "@angular/core": "^13.1.0",
     "primeflex": "^3.1.2",
     "primeicons": "^5.0.0",
-    "primeng": "^13.0.2"
+    "primeng": "^13.0.2",
+    "quill": "^1.3.7"
   },
   "dependencies": {
     "tslib": "^2.3.0"
