--- a/projects/corelib/package.json
+++ b/projects/corelib/package.json
@@ -8,7 +8,9 @@
     "primeflex": "^3.1.2",
     "primeicons": "^5.0.0",
     "primeng": "^13.0.2",
-    "quill": "^1.3.7"
+    "quill": "^1.3.7",
+    "ag-grid-angular": "^26.2.0",
+    "ag-grid-community": "^26.2.1"
   },
   "dependencies": {
     "tslib": "^2.3.0"
