--- a/projects/corelib/package.json
+++ b/projects/corelib/package.json
@@ -8,12 +8,12 @@
     "@angular/cdk": "^13.1.1",
     "@angular/common": "^13.1.0",
     "@angular/core": "^13.1.0",
+    "ag-grid-angular": "^26.2.0",
+    "ag-grid-community": "^26.2.1",
     "primeflex": "^3.1.2",
     "primeicons": "^5.0.0",
     "primeng": "^13.0.2",
-    "quill": "^1.3.7",
-    "ag-grid-angular": "^26.2.0",
-    "ag-grid-community": "^26.2.1"
+    "quill": "^1.3.7"
   },
   "dependencies": {
     "tslib": "^2.3.0"
