--- a/package.json
+++ b/package.json
@@ -17,35 +17,35 @@
     "test": "ng test"
   },
   "private": true,
-  "dependencies": {
-    "@angular/animations": "^13.1.1",
-    "@angular/common": "^13.1.1",
-    "@angular/compiler": "^13.1.1",
-    "@angular/core": "^13.1.1",
-    "@angular/forms": "^13.1.1",
-    "@angular/platform-browser": "^13.1.1",
-    "@angular/platform-browser-dynamic": "^13.1.1",
-    "@angular/router": "^13.1.1",
-    "corelib": "file:dist/corelib",
-    "rxjs": "^7.5.1",
-    "tslib": "^2.3.1",
-    "zone.js": "^0.11.4"
-  },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.1.2",
-    "@angular/cli": "^13.1.2",
-    "@angular/compiler-cli": "^13.1.1",
-    "@angular/language-service": "^13.1.1",
+    "@angular-devkit/build-angular": "^13.1.3",
+    "@angular/cli": "^13.1.3",
+    "@angular/compiler-cli": "^13.1.2",
+    "@angular/language-service": "^13.1.2",
     "@types/jasmine": "^3.10.3",
     "@types/node": "^17.0.8",
     "angular-in-memory-web-api": "^0.13.0",
+    "coverage": "^0.4.1",
     "jasmine-core": "^4.0.0",
-    "karma": "^6.3.10",
+    "karma": "^6.3.11",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.1.0",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "ng-packagr": "^13.1.2",
+    "ng-packagr": "^13.1.3",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "@angular/animations": "^13.1.2",
+    "@angular/common": "^13.1.2",
+    "@angular/compiler": "^13.1.2",
+    "@angular/core": "^13.1.2",
+    "@angular/forms": "^13.1.2",
+    "@angular/platform-browser": "^13.1.2",
+    "@angular/platform-browser-dynamic": "^13.1.2",
+    "@angular/router": "^13.1.2",
+    "corelib": "file:dist/corelib",
+    "rxjs": "^7.5.2",
+    "tslib": "^2.3.1",
+    "zone.js": "^0.11.4"
   }
 }
